--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
 
     <link
       rel="icon"
@@ -46,14 +52,18 @@
             and co-workers.
           </p>
 
-          <form action="">
+          <form class="get-started" action="">
             <input
               type="email"
               name="direction-E-mail"
               id=""
-              placeholder="Enter your e mail"
+              placeholder="Enter your e-mail"
             />
-            <input type="submit" value="Get starter" />
+            <input
+              class="get-started__submit"
+              type="submit"
+              value="Get started"
+            />
           </form>
         </div>
 
