--- a/index.html
+++ b/index.html
@@ -71,19 +71,42 @@
           <img src="/images/illustration-1.svg" alt="hero image" />
         </figure>
       </section>
+      <section class="product">
+        <div class="product__description">
+          <h2>Stay productive, wherever you are</h2>
+          <p>
+            Never let location be an issue when accessing your files. Fylo has
+            you covered for all of your file storage needs.
+          </p>
+          <p>
+            Securely share files and folders with friends, family and colleagues
+            for live collaboration. No email attachments required!
+          </p>
+          <div class="product__review">
+            <p>
+              <cite>
+                Fylo has improved our team productivity by an order of
+                magnitude. Since making the switch our team has become a
+                well-oiled collaboration machine.
+              </cite>
+            </p>
+            <div class="product__user">
+              <img src="" alt="" />
+              <h3>Kyle Burton</h3>
+              <p>Founder & CEO, Huddle</p>
+            </div>
+          </div>
+        </div>
+        <figure class="product__img-container">
+          <img src="" alt="" />
+        </figure>
+      </section>
     </main>
 
-    Stay productive, wherever you are Never let location be an issue when
-    accessing your files. Fylo has you covered for all of your file storage
-    needs. Securely share files and folders with friends, family and colleagues
-    for live collaboration. No email attachments required! See how Fylo works
-    Fylo has improved our team productivity by an order of magnitude. Since
-    making the switch our team has become a well-oiled collaboration machine.
-    Kyle Burton Founder & CEO, Huddle Get early access today It only takes a
-    minute to sign up and our free starter tier is extremely generous. If you
-    have any questions, our support team would be happy to help you. Get Started
-    For Free Phone: +1-543-123-4567 example@fylo.com About Us Jobs Press Blog
-    Contact Us Terms Privacy
+    Get early access today It only takes a minute to sign up and our free
+    starter tier is extremely generous. If you have any questions, our support
+    team would be happy to help you. Get Started For Free Phone: +1-543-123-4567
+    example@fylo.com About Us Jobs Press Blog Contact Us Terms Privacy
 
     <footer>
       <p class="attribution">
